# radgrounder

./: .gitignore  .gitmodules  LICENSE  LICENSE_APACHE  LICENSE_MODELS  README.md  pyproject.toml  requirements-judge.txt  requirements.txt
data_splits/vqa_rad/: README.md  test_fixed_split.json  train_fixed_split.json  validation_fixed_split.json
docs/: DATASET_FORMAT.md  TRAINING.md
radgrounder/: __init__.py  paths.py
radgrounder/dataset/: dataset_manager.py  dataset_utils.py  image_preprocessing.py
radgrounder/dataset/segmentation/: refrad2d_detect.py  refrad2d_detect_merged.py  refrad2d_detect_vqa.py  refrad2d_segment.py  refrad2d_segment_merged.py  refrad2d_segment_vqa.py
radgrounder/dataset/segmentation/detect_vqa/: vqa_templates_english.json  vqa_templates_german.json
radgrounder/dataset/segmentation/grounding_pipeline/: README.md  __init__.py  bbox_utils.py  keywords_system_prompt_de.md  keywords_system_prompt_eng.md  scan_io.py  step1_segment_scans.py  step2_unify_labels.py  step3_extract_keywords.py  step4_build_grounding_dataset.py
radgrounder/dataset/segmentation/label_map/: README.md  class_2_organ_name_english.json  class_2_organ_name_german.json  ct_label_map.json  merged_label_map.json  mr_label_map.json  total_ct_id_2_frerad_id.json  total_mr_id_2_frerad_id.json
radgrounder/dataset/segmentation/total_segmentator/: read_segmentation.py
radgrounder/dataset/vqa_dataset/: refrad2d_v18.py  refrad2d_vqa_dataset.py  slake_vqa.py  vqa_rad.py
radgrounder/grounded_gemma/: augmentations.py  detect_vis_utils.py  detection_augmentations.py  eval_detectgemma.py  eval_groundedgemma.py  ggemma_trainer.py  inference.py  load_paligemma_w_new_siglip.py  modeling_groundedgemma.py  recalculate_refrad2d_vqa_metrics.py  run_eval_detect.sh  run_eval_segment.sh  run_train_detect.sh  run_train_public_external.sh  run_train_segment.sh  segment_vis_utils.py  train_detectgemma.py  train_groundedgemma.py  utils.py
radgrounder/grounded_gemma/configs/: README.md  radgrounder_detection.json  radgrounder_segmentation.json  train_public_vqa.json
radgrounder/grounded_gemma/g_iou/: detect_grounding_evaluator.py  segment_grounding_evaluator.py
radgrounder/grounded_gemma/segmentation_heads/: segmentation_decoder.py
radgrounder/llm_score/: README.md  __init__.py  context_medical_report.json  context_medical_vqa.json  llm_score_server.py  score_system_prompt.md  start_gemma3_server.sh
tools/: compare_eval.py
